tests/rosetta/out/Smalltalk/best-shuffle.out
/workspace/mochi/tests/rosetta/out/Smalltalk/best-shuffle.st:77: parse error, expected '|' or identifier
